<resources>    <string name="app_name">Object Box Practice</string>    <string name="customer_name">Animal Name</string>    <string name="book_name">Zoo</string>    <string name="submit">Submit</string>    <string name="zooList">Zoo List</string>    <string name="animalList">Animal List</string>    <string name="developer">André Mion</string>    <string name="website">https://github.com/andremion</string>    <string name="menu_item_import">Import</string>    <string name="menu_item_gallery">Gallery</string>    <string name="menu_item_slideshow">Slideshow</string>    <string name="menu_item_tools">Tools</string>    <string name="menu_group_communicate">Communicate</string>    <string name="menu_item_share">Share</string>    <string name="menu_item_send">Send</string></resources>