<?xml version="1.0" encoding="utf-8"?><menu xmlns:android="http://schemas.android.com/apk/res/android">    <group android:checkableBehavior="single">        <item            android:id="@+id/nav_camera"            android:icon="@drawable/ic_profile"            android:title="@string/menu_item_import"/>        <item            android:id="@+id/nav_gallery"            android:icon="@drawable/ic_settings"            android:title="@string/menu_item_gallery"/>    </group>    <item android:title="@string/menu_group_communicate">        <menu>            <item                android:id="@+id/nav_share"                android:icon="@drawable/ic_feed"                android:title="@string/menu_item_share"/>            <item                android:id="@+id/nav_send"                android:icon="@drawable/ic_settings"                android:title="@string/menu_item_send"/>        </menu>    </item></menu>