<?xml version="1.0" encoding="utf-8"?>    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"        xmlns:android="http://schemas.android.com/apk/res/android"        xmlns:tools="http://schemas.android.com/tools"        android:layout_width="match_parent"        android:layout_height="match_parent"        android:background="#f5f5f6"        tools:context=".MainActivity">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_margin="@dimen/layout_margin"        android:background="@color/background_light"        android:padding="@dimen/layout_padding"        android:orientation="vertical">         <com.rengwuxian.materialedittext.MaterialEditText android:id="@+id/animalrNameText"            android:layout_width="match_parent"            android:layout_height="wrap_content"            app:met_baseColor="@color/base_color"            app:met_primaryColor="@color/colorPrimary"            app:met_errorColor="@color/error_color"            app:met_floatingLabel="normal"            app:met_maxCharacters="30"            android:hint="@string/customer_name" />         <com.rengwuxian.materialedittext.MaterialEditText android:id="@+id/zooNameText"            android:layout_width="match_parent"            android:layout_height="wrap_content"            app:met_baseColor="@color/base_color"            app:met_primaryColor="@color/colorPrimary"            app:met_errorColor="@color/error_color"            app:met_floatingLabel="normal"            app:met_maxCharacters="30"            android:hint="@string/book_name" />         <Button android:id="@+id/submit"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:padding="@dimen/layout_padding"            android:text="@string/submit"            android:textColor="@color/background_light"            android:background="@drawable/ripple" />    </LinearLayout></RelativeLayout>